added styling to contact form

--- a/index.html
+++ b/index.html
@@ -462,7 +462,11 @@
               <label for="user-input">Drop us a line</label>
             </div>
             <div class="col span-2-of-3">
-              <textarea name="message" id="user-input"></textarea>
+              <textarea
+                name="message"
+                id="user-input"
+                placeholder="Your message"
+              ></textarea>
             </div>
           </div>
           <div class="row">
