--- a/index.html
+++ b/index.html
@@ -480,32 +480,39 @@
         </form>
       </div>
     </section>
+    <footer>
+      <div class="row">
+        <div class="col span-1-of-2">
+          <ul class="footer-nav">
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Press</a></li>
+            <li><a href="#">IOS app</a></li>
+            <li><a href="#">Android app</a></li>
+          </ul>
+        </div>
+        <div class="col span-1-of-2">
+          <ul class="socials">
+            <li>
+              <a href="#"><i class="ion-social-facebook icon-small"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="ion-social-twitter icon-small"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="ion-social-googleplus icon-small"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="ion-social-instagram icon-small"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <p>
+          Copyright &copy; 2015 by Omnifood. All rights reserved.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
-
-<!--
-  Plan 1: Premium
-399$ per month
-That’s only 13.30$ per meal
-1 meal every day
-Order 24/7
-Access to newest creations
-Free delivery
-
-
-Plan 2: Pro
-149$ per month
-That’s only 14.90$ per meal
-1 meal 10 days/month
-Order 24/7
-Access to newest creations
-Free delivery
-
-
-Plan 3: Starter
-19$ per meal
-1 meal
-Order from 8 am to 12 pm
-Free delivery
-
--->
